--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
                               </a>
                           </li>
                           <li class="mobile-nav-item">
-                              <a href="#" class="nav-link">home</a>
+                              <a href="index.html" class="nav-link">home</a>
                           </li>
                           <li class="mobile-nav-item">
-                              <a href="#" class="nav-link">shop</a>
+                              <a href="index.html" class="nav-link">shop</a>
                           </li>
                           <li class="mobile-nav-item">
-                              <a href="#" class="nav-link">about</a>
+                              <a href="index.html" class="nav-link">about</a>
                           </li>
                           <li class="mobile-nav-item">
-                              <a href="#" class="nav-link">contact</a>
+                              <a href="index.html" class="nav-link">contact</a>
                           </li>
                       </ul>
                   </div>
