Add mobile image sources and enhance footer styling

--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@
                 </a>
             </div>
           </div>
-
-         
       </div>
   </header>
+  <footer class="main-footer">
+    <div class="about-footer"></div>
+    <div class="banner-footer"></div>
+  </footer>
   <script src="static/js/script.js"></script>
 </body>
 </html>
